--- a/css/style.css
+++ b/css/style.css
@@ -1,456 +1,497 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
-@import url(https://fonts.googleapis.com/css?family=Pacifico);
+@charset "utf-8";
 
-/* reset */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
-address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;}
-ul{list-style:none;}
-table{border-collapse:collapse;border-spacing:0;}
-caption,th{text-align:left;}
-q:before,q:after{content:'';}
-object,embed{vertical-align:top;}
-legend{display:none;}
-h1,h2,h3,h4,h5,h6{font-size:100%;}
-img,abbr,acronym,fieldset{border:0;}
 
-body{
-	font: 14px/1.9 'Noto Sans JP', Arial, Verdana, 游ゴシック, YuGothic,'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', メイリオ, Meiryo,sans-serif;
-	font-weight: 300;
-	-webkit-text-size-adjust:100%;
-	overflow-x: hidden;
-	color: #000;
-	background: #fff;
+/*Google Fontsの読み込み
+---------------------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&display=swap');
+
+/*Font Awesomeの読み込み
+---------------------------------------------------------------------------*/
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+
+/*lightbox.cssの読み込み
+---------------------------------------------------------------------------*/
+@import url(https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.css);
+
+
+/*opa1のキーフレーム設定
+---------------------------------------------------------------------------*/
+@keyframes opa1 {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
 }
 
-a{
-	color: #0066ff;
+
+/*animation1のキーフレーム設定（開閉ブロックのアニメーションに使用）
+---------------------------------------------------------------------------*/
+@keyframes animation1 {
+	0% {left: -200px;}
+	100% {left: 0px;}
+}
+
+
+
+/*全体の設定
+---------------------------------------------------------------------------*/
+body * {box-sizing: border-box;}
+html,body {
+	height: 100%;
+	font-size: 13px;	/*基準となるフォントサイズ。*/
+}
+
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+
+	html, body {
+		font-size: 14px;	/*基準となるフォントサイズ。*/
+	}
+
+	}/*追加指定ここまで*/
+
+body {
+	font-family: "M PLUS 1", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;	/*フォント種類*/
+	font-weight: 300;
+	font-optical-sizing: auto;
+	letter-spacing: 0.1rem;
+	text-indent: 0.1rem;
+	-webkit-text-size-adjust: none;
+	margin: 0;padding: 0;
+	line-height: 2.5;		/*行間*/
+	background: #24385b;		/*背景色*/
+	color: #fff;			/*文字色*/
+}
+
+/*リセット*/
+figure {margin: 0;}
+dd {margin: 0;}
+nav,ul,li {margin: 0;padding: 0;}
+nav ul {list-style: none;}
+h1,h2,h3,h4 {font-weight: 400;}
+
+/*table全般の設定*/
+table {border-collapse:collapse;}
+
+/*画像全般の設定*/
+img {border: none;max-width: 100%;height: auto;vertical-align: middle;}
+
+/*videoタグ*/
+video {max-width: 100%;}
+
+/*iframeタグ*/
+iframe {width: 100%;}
+
+/*他*/
+input {font-size: 1rem;}
+strong {font-weight: 500;}
+
+
+/*リンクテキスト全般の設定
+---------------------------------------------------------------------------*/
+a {
+	color: #fff;	/*文字色*/
+	transition: 0.3s;	/*hoverまでにかける時間。0.3秒。*/
+}
+
+/*マウスオン時*/
+a:hover {
 	text-decoration: none;
 }
 
-a:hover, .active{
-  text-decoration: underline;
+
+/*header（ロゴとメニューが入ったブロック）
+---------------------------------------------------------------------------*/
+header {
+	width: 250px;		/*幅*/
+	padding: 0 2vw;		/*ヘッダー内の余白。上下、左右への順番。*/
+	margin-top: 5vw;	/*ヘッダーの上に空けるスペース*/
+	text-align: center;	/*テキストをセンタリング*/
 }
 
-a:active, a:focus,input:active, input:focus{outline:0;}
-
-
-/* ヘッダー
-------------------------------------------------------------*/
-#header{
-	text-align: center;
+/*ロゴ*/
+header #logo img {display: block;}
+header #logo {
+	padding: 0;margin: 0;
 }
 
-#header h1{
-	padding-top: 60px;
-}
-
-#mainnav a{
-	color: #000;
-}
-
-#mainImg{
-	position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 528px;
-}
-
-#mainImg img{
-	position: absolute;
-  left: 50%;
-	max-width: 1280px;
-  width: 1280px;
-  height: 528px;
-  margin-left: -640px;
-}
-
-
-/* フッター
-------------------------------------------------------------*/
-#footer{
-	clear: both;
-	padding: 50px 10px 50px 0;
-	text-align: center;
-	font-size: 12px;
-}
-
-
-/* 共通
-------------------------------------------------------------*/
-
-img{
-	max-width: 100%;
-	height: auto;
-}
-
-section{
-	clear:both;
-	padding-top: 70px;
-}
-
-section h2{
-	font-family: 'Pacifico', cursive;
-	width: 60%;
-	margin: 0 auto 40px;
-	font-size: 22px;
-	font-weight:normal;
-	text-align: center;
-	background: url(../images/borderBlack.png) repeat-x 0 50%;
-	background-size: 1px 1px;
-}
-
-section h2 span {
-	background: #fff;
-	padding: 0 80px;
-}
-
-.inner{
-	width: 94%;
-	margin: 0 auto;
-	padding-bottom: 50px;
-}
-
-.innerS{
-	width: 60%;
-	margin: 0 auto;
-	padding-bottom: 80px;
-}
-
-
-/* SEC02 Gallery
-------------------------------------------------------------*/
-#sec02{
-	padding: 0 !important;
-}
-
-#sec02 header{
-	display: none;
-}
-
-#gallery li{
-	float: left;
-	width: calc(100%/3);
-	line-height: 0;
-}
-
-#gallery img{
-	width: 100%;
-	height: auto;
-}
-
-
-/* SEC03 PROJECT
-------------------------------------------------------------*/
-#sec03 img{
-	width: 100%;
-	margin-bottom: 30px;
-}
-
-
-/* SEC04 BRAND
-------------------------------------------------------------*/
-.col3 img{
+/*ロゴ下の小文字*/
+header #logo span {
 	display: block;
-	margin: 0 auto 5px;
+	font-size: 0.7rem;	/*文字サイズを70%に*/
 }
 
-.col3 li{
-	line-height: 2.0;
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+
+	header {
+		position: fixed;	/*スクロールしても動かないようにする設定*/
+		left: 0px;
+		top: 0px;
+	}
+
+	}/*追加指定ここまで*/
+
+	/*画面の高さが500px以下の追加指定*/
+	@media screen and (max-height:500px) {
+
+	header {
+		position: absolute;	/*メニューが切れて見えなくならないように、fixedを中止する*/
+	}
+
+	}/*追加指定ここまで*/
+
+
+/*mainブロック（右側のsectionを囲むブロック）
+---------------------------------------------------------------------------*/
+
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+
+	main {
+		margin-left: 250px;	/*headerのwidthに合わせる*/
+	}
+
+	}/*追加指定ここまで*/
+
+
+/*main内のh2*/
+main h2 {
+	font-size: 2.5rem;	/*文字サイズを2.5倍*/
 }
 
-.col3 .img{
-	padding: 80px 50px;
-	margin-bottom: 40px;
-	line-height: 0 !important;
-	background: #f6f6f6;
-}
-
-#sec04_02{
-	background: url(../images/bgSec04.jpg) no-repeat 100% 100% fixed;
-	background-size: cover;
-	-webkit-background-size: cover;
-	text-align: center;
-	padding: 220px 20px;
-}
-
-#sec04_02 img{
-	width: auto;
+/*main内のh3*/
+main h3 {
+	font-size: 1.5rem;	/*文字サイズを1.5倍*/
 }
 
 
-/* SEC05 COMPANY
-------------------------------------------------------------*/
-#sec05 p{
-	margin-bottom: 5px;
+
+/*メニューブロック初期設定
+---------------------------------------------------------------------------*/
+/*メニューをデフォルトで非表示*/
+#menubar {display: none;}
+
+/*上で非表示にしたメニューを表示させる為の設定*/
+.large-screen #menubar {display: block;}
+.small-screen #menubar.display-block {display: block;}
+
+/*3本バーをデフォルトで非表示*/
+#menubar_hdr.display-none {display: none;}
+
+
+/*メニュー
+---------------------------------------------------------------------------*/
+/*メニューブロック全体*/
+#menubar ul {
+	margin: 3rem 0;	/*メニューブロックの外側に空けるスペース*/
 }
 
-.col2 li{
-	display: inline-block;
+/*メニュー一個あたり*/
+#menubar nav a {
+	text-decoration: none;display: block;
+	background: rgba(0,0,0,0.5);	/*背景色。0,0,0は黒のことで0.5は色が50%出た状態。*/
+	border: 1px solid rgba(255,255,255,0.3);	/*枠線の幅、線種、色。255,255,255は白のことで0.3は色が30%出た状態。*/
+	color: #fff;		/*文字色*/
+	padding: 0.5rem;	/*余白*/
+	margin: 0.5rem 0;	/*メニューの外側に空けるスペース。上下、左右。*/
+	border-radius: 5px;	/*角を丸くする指定*/
+}
+
+/*マウスオン次*/
+#menubar nav a:hover {
+	background: rgba(0,0,0,0.9);	/*背景色。透明度を変更して濃くします。*/
+	border: 1px solid rgba(255,255,255,0.9);	/*枠線。透明度を変更して濃くします。*/
+}
+
+/*900px以下画面でのメニュー
+---------------------------------------------------------------------------*/
+/*メニューブロック全体*/
+.small-screen #menubar.display-block {
+	position: fixed;overflow: auto;z-index: 100;
+	left: 0px;top: 0px;
 	width: 100%;
-	margin: 20px 0;
+	height: 100%;
+	padding-top: 80px;
+	background: rgba(0,0,0,0.8);		/*背景色*/
+	animation: animation1 0.2s both;	/*animation1を実行する。0.2sは0.2秒の事。*/
+}
+.small-screen #menubar ul {
+	margin: 3rem;	/*メニューブロックの外側に空けるスペース*/
 }
 
-#sns img{
-	padding: 35px 10px 5px 0;
+
+/*３本バー（ハンバーガー）アイコン設定
+---------------------------------------------------------------------------*/
+/*３本バーを囲むブロック*/
+#menubar_hdr {
+	animation: opa1 0s 0.2s both;
+	position: fixed;z-index: 101;
+	cursor: pointer;
+	right: 30px;			/*右からの配置場所指定*/
+	top: 30px;				/*上からの配置場所指定*/
+	padding: 16px 14px;		/*上下、左右への余白*/
+	width: 46px;			/*幅（３本バーが出ている場合の幅になります）*/
+	height: 46px;			/*高さ*/
+	display: flex;					/*flexボックスを使う指定*/
+	flex-direction: column;			/*子要素（３本バー）部分。flexはデフォルトで横並びになるので、それを縦並びに変更。*/
+	justify-content: space-between;	/*並びかたの種類の指定*/
+	background: #d30c44;	/*背景色*/
 }
 
-#sns a:hover img{
-	opacity: .8;
+/*バー１本あたりの設定*/
+#menubar_hdr span {
+	display: block;
+	transition: 0.3s;	/*アニメーションにかける時間。0.3秒。*/
+	border-top: 1.5px solid #fff;	/*線の幅、線種、色*/
 }
 
-#map{
-	position: relative;
-	padding-bottom: 75%;
-	height: 0;
-	overflow: hidden;
-	z-index: 0;
+/*×印が出ている状態の設定。※１本目および２本目のバーの共通設定。*/
+#menubar_hdr.ham span:nth-of-type(1),
+#menubar_hdr.ham span:nth-of-type(3) {
+	transform-origin: center center;	/*変形の起点。センターに。*/
+	width: 20px;						/*バーの幅*/
 }
 
-#map iframe{
-	position: absolute;
+/*×印が出ている状態の設定。※１本目のバー。*/
+#menubar_hdr.ham span:nth-of-type(1){
+	transform: rotate(45deg) translate(3.8px, 5px);	/*回転45°と、X軸Y軸への移動距離の指定*/
+}
+
+/*×印が出ている状態の設定。※３本目のバー。*/
+#menubar_hdr.ham span:nth-of-type(3){
+	transform: rotate(-45deg) translate(3.8px, -5px);	/*回転-45°と、X軸Y軸への移動距離の指定*/
+}
+
+/*×印が出ている状態の設定。※２本目のバー。*/
+#menubar_hdr.ham span:nth-of-type(2){
+	display: none;	/*２本目は使わないので非表示にする*/
+}
+
+
+/*メニュー内にあるソーシャルメディアのアイコン
+---------------------------------------------------------------------------*/
+ul.icons {
+	list-style: none;
+	margin: 0;padding: 0;
+	display: flex;
+	justify-content: center;
+}
+ul.icons li {
+	margin-right: 10px;	/*アイコン同士の余白*/
+}
+ul.icons i {
+	font-size: 20px;	/*Font Awesomeのアイコンサイズ*/
+}
+
+
+/*section
+---------------------------------------------------------------------------*/
+/*フェード設定*/
+.section::before {
+	opacity: 0; /* 初期状態では非表示 */
+	transition: opacity 1s; /* 1秒かけてフェードイン/フェードアウト */
+}
+.section.active::before {
+	opacity: 1; /* フェードイン状態 */
+}
+.section.inactive::before {
+	opacity: 0; /* フェードアウト状態 */
+}
+
+/*section要素*/
+section {
+	padding: 2vw 5vw;	/*ボックス内の余白。上下、左右への順番。*/
+}
+
+/*４つのsectionブロックの共通設定*/
+#section1,#section2,#section3,#section4 {
+	min-height: calc(100dvh - 50px);	/*最低の高さ。100dvhは画面の高さ100%のこと。50pxは下のmarginの値。*/
+	margin-bottom: 50px;	/*ボックスの下に空けるスペース*/
+	padding: 5vw;			/*ボックス内の余白*/
+}
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+
+	#section1,#section2,#section3,#section4 {
+		border-radius: 3vw 0 0 3vw;	/*角丸の指定。左上、右上、右下、左下への順番。*/
+	}
+
+	}/*追加指定ここまで*/
+
+
+/*背景画像を置く為の設定*/
+#section1::before,#section2::before,#section3::before,#section4::before {
+	content: '';
+	position: fixed;z-index: -1;
 	top: 0;
 	left: 0;
-	width: 100% !important;
-	height: 100% !important;
-	border: 0;
+	width: 100%;
+	height: 100%;
+}
+
+/*section1の設定*/
+#section1 {
+	color: #fff;	/*文字色*/
+}
+#section1::before {
+	background: url('../images/section1.jpg') no-repeat center center / cover;	/*背景画像の読み込み*/
+}
+
+/*section2の設定*/
+#section2 {
+	background-color: rgba(20,120,180,0.7);	/*背景色。３つ目までの数字はrgbでの色指定。最後の小数点は透明度。*/
+	color: #fff;	/*文字色*/
+}
+#section2::before {
+	background: url('../images/section2.jpg') no-repeat center center / cover;	/*背景画像の読み込み*/
+}
+
+/*section3の設定*/
+#section3 {
+	background-color: rgba(21,106,77,0.7);	/*背景色。３つ目までの数字はrgbでの色指定。最後の小数点は透明度。*/
+	color: #fff;	/*文字色*/
+}
+#section3::before {
+	background: url('../images/section3.jpg') no-repeat center center / cover;	/*背景画像の読み込み*/
+}
+
+/*section4の設定*/
+#section4 {
+	color: #fff;	/*文字色*/
+}
+#section4::before {
+	background: #173f47;	/*section4だけは背景画像ではなく、単に背景色だけ指定しました。*/
+}
+
+/*背景色を入れない場合（画像だけを表示したい場合）*/
+.no-bgcolor {background-color: transparent !important;}
+
+
+/*フッター設定
+---------------------------------------------------------------------------*/
+footer small {font-size: 100%;}
+footer {
+	font-size: 0.8rem;
+	text-align: center;		/*内容をセンタリング*/
+	padding-bottom: 1rem;
+}
+
+/*リンクテキスト*/
+footer a {color: inherit;text-decoration: none;}
+
+
+/*お知らせブロック
+---------------------------------------------------------------------------*/
+/*記事の下に空ける余白*/
+.new dd {
+	padding-bottom: 1rem;
+}
+
+/*ブロック内のspan。日付の横のアイコン的な部分の共通設定*/
+.new dt span {
+	display: inline-block;
+	text-align: center;
+	line-height: 1.8;		/*行間（アイコンの高さ）*/
+	border-radius: 3px;		/*角を丸くする指定*/
+	padding: 0 0.5rem;		/*上下、左右へのブロック内の余白*/
+	width: 6rem;			/*幅。６文字分。*/
+	transform: scale(0.8);	/*80%のサイズに縮小*/
+	background: rgba(255,255,255,0.8);		/*背景色*/
+	color: #333;			/*文字色*/
+}
+
+	/*画面幅700px以上の追加指定*/
+	@media screen and (min-width:700px) {
+
+	/*ブロック全体*/
+	.new {
+		display: grid;	/*gridを使う指定*/
+		grid-template-columns: auto 1fr;	/*横並びの指定。日付とアイコン部分の幅は自動で、内容が入るブロックは残り幅一杯とる。*/
+	}
+
+	}/*追加指定ここまで*/
+
+
+/*list-grid（gallery.htmlでサムネイルを表示している部分の設定です）
+---------------------------------------------------------------------------*/
+/*listブロックを囲む外側のボックス*/
+.list-grid-trimming {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);	/*ここの「4」の数字が横に並べる数です。3列がいいなら(3, 1fr)です。*/
+	gap: 1rem;	/*マージン的な数値。サムネイル間を１文字分あけます。*/
+}
+
+/*ボックスを正方形にトリミングする為の指定なので変更しない。*/
+.list-grid-trimming .list {
+	position: relative;
+	overflow: hidden;
+	height: 0;
+	padding-top: 100%;
+}
+.list-grid-trimming .list a {
+	display: block;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+.list-grid-trimming .list img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	transition: 0.5s;	/*マウスオン時にかける時間。0.5秒。*/
+}
+
+/*マウスオン時の画像*/
+.list-grid-trimming .list img:hover {
+	transform: scale(1.1);	/*1.1倍に拡大*/
+	filter: contrast(1.3);	/*コントラストを1.3倍*/
 }
 
 
+/*PAGE TOP（↑）設定
+---------------------------------------------------------------------------*/
+.pagetop-show {display: block;}
 
-/* RESPONSIVE 設定
-------------------------------------------------------------*/
-
-@media only screen and (min-width: 1200px){
-	.inner{
-		width: 1024px;
-	}
+/*ボタンの設定*/
+.pagetop a {
+	display: block;text-decoration: none;text-align: center;z-index: 99;
+	animation: opa1 0.2s 0.2s both;	/*一瞬ボタンが出ちゃうのを隠す為の応急措置*/
+	position: fixed;	/*スクロールに追従しない(固定で表示)為の設定*/
+	right: 20px;		/*右からの配置場所指定*/
+	bottom: 20px;		/*下からの配置場所指定*/
+	color: #fff;		/*文字色*/
+	font-size: 1.5rem;	/*文字サイズ*/
+	background: rgba(0,0,0,0.2);	/*背景色。0,0,0は黒の事で0.2は色が20%出た状態。*/
+	width: 60px;		/*幅*/
+	line-height: 60px;	/*高さ*/
+	border-radius: 50%;	/*円形にする*/
 }
 
-@media only screen and (min-width: 800px){
-	body{
-		font-size:14px;
-	}
-	
-  a#menu{
-		display:none;
-	}	
+/*その他
+---------------------------------------------------------------------------*/
+.clearfix::after {content: "";display: block;clear: both;}
+.l {text-align: left !important;}
+.c {text-align: center !important;}
+.r {text-align: right !important;}
+.ws {width: 95%;display: block;}
+.wl {width: 95%;display: block;}
+.mb0 {margin-bottom: 0px !important;}
+.mb30 {margin-bottom: 30px !important;}
+.look {display: inline-block;padding: 0px 10px;background: #000;border: 1px solid #fff;border-radius: 3px;margin: 5px 0; word-break: break-all;}
+.small {font-size: 0.75em;}
+.large {font-size: 2em; letter-spacing: 0.1em;}
+.color-check, .color-check a {color: #ffcf0d;}
+.pc {display: none;}
+.dn {display: none !important;}
+.block {display: block !important;}
 
-	.panel{
-		display:block !important;
-	}
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
 
-	#mainnav li{
-		display: inline-block;
-		padding: 50px 25px;
-		font-size: 15px;
-	}
-	
-	
-	/* SEC03 PROJECT
-	-----------------*/
-	.col3{
-		text-align: center;
-	}
+		.ws {width: 48%;display: inline;}
+		.sh {display: none;}
+		.pc {display: block;}
 
-	.col3 li{
-		display: inline-block;
-		width: 28%;
-		padding: 0 2.5% 50px;
-		margin-bottom: 0;
-		vertical-align: top;
-		text-align: left;
-	}
-	
-  #footer{
-		padding: 30px 10px 70px 0;
-	}
-}
-
-
-@media only screen and (min-width: 641px){
-	.col2 li{
-		width: 60%;
-		vertical-align: top;
-	}
-	.col2 li:first-child{
-		width: 35%;
-		padding-right: 4%;
-	}
-}
-
-@media only screen and (max-width: 640px){
-	.innerS{
-		width: 94%;
-		padding-bottom: 70px;
-	}
-	.col3 li{
-		line-height: 1.7;
-	}
-	.col3 img{
-		margin: 0 auto;
-	}
-	.col3 .img{
-		padding: 30px;
-		margin-bottom: 20px;
-	}
-	#gallery li{
-		float: none;
-		width: 100%;
-	}
-	#map iframe{
-		width: 96% !important;
-		left: 2%;
-	}
-	#sec04_02{
-		padding: 50px 20px;
-	}
-}
-
-@media only screen and (max-width: 799px){
-	#header{
-		position: fixed;
-		width: 100%;
-		z-index: 500;
-	}
-	
-	#headerWrap{
-		position: relative;
-		width: 100%;
-		height: 70px;
-		background: #fff;
-		border-bottom: 1px solid #ccc;
-	}
-	
-	#header h1{
-		padding-top: 10px;
-	}
-	
-	#header h1 img{
-		margin-top: 3px;
-		max-height: 45px;
-		width: auto !important;
-	}
-
-  a#menu{
-  	display: inline-block;
-  	position: relative;
-  	width: 40px;
-  	height: 40px;
-  	margin: 10px;
-	}
-
-	#menuBtn{
-  	display: block;
-  	position: absolute;
-  	top: 60%;
-  	left: 50%;
-  	width: 18px;
-  	height: 2px;
-  	margin: -1px 0 0 -7px;
-  	background: #000;
-  	transition: .2s;
-	}
-
-	#menuBtn:before, #menuBtn:after{
-  	display: block;
-  	content: "";
-  	position: absolute;
-  	top: 50%;
-  	left: 0;
-  	width: 18px;
-  	height: 2px;
-  	background: #000;
-  	transition: .3s;
-	}
-
-	#menuBtn:before{
-  	margin-top: -7px;
-	}
-
-	#menuBtn:after{
-  	margin-top: 5px;
-	}
-
-	a#menu .close{
-  	background: transparent;
-	}
-
-	a#menu .close:before, a#menu .close:after{
-  	margin-top: 0;
-	}
-
-	a#menu .close:before{
-  	transform: rotate(-45deg);
-  	-webkit-transform: rotate(-45deg);
-	}
-
-	a#menu .close:after{
-  	transform: rotate(-135deg);
-  	-webkit-transform: rotate(-135deg);
-	}
-
-	.panel{
-		width: 100%;
-		display: none;
-		overflow: hidden;
-		position: relative;
-		left: 0;
-		top: 0;
-		z-index: 100;
-	}
-
-	#mainnav{
-		position: absolute;
-		top: 0;
-		width: 100%;
-		text-align: right;
-		z-index:500;
-	}
-
-	#mainnav ul{
-		border-bottom: 1px solid #ccc;
-		background: #fff;
-		text-align: left;
-	}
-
-	#mainnav li a{
-		position: relative;
-		display:block;
-		padding:15px 25px;
-		border-bottom: 1px solid #ccc;
-		color: #000;
-		font-weight: 400;
-	}
-
-	#mainnav li a:before{
-		display: block;
-		content: "";
-		position: absolute;
-		top: 50%;
-		left: 5px;
-		width: 6px;
-		height: 6px;
-		margin: -4px 0 0 0;
-		border-top: solid 2px #000;
-		border-right: solid 2px #000;
-		-webkit-transform: rotate(45deg);
-		transform: rotate(45deg);
-	}
-	#mainImg{
-		padding-top: 60px;
-		z-index: -100;
-	}
-	.col3 li{
-		margin: 50px auto 0 auto;
-		display: block;
-	}
-	section{
-		padding-top: 50px;
-	}
-	section h2{
-		margin: 0 auto 20px;
-	}
-	section h2 span {
-		padding: 0 30px;
-	}
-}
+	}/*画面幅900px以上の追加指定ここまで*/
